[metadata]
name = trakt-tools
author = Dean Gardiner
author-email = me@dgardiner.net
classifier =
    Intended Audience :: End Users/Desktop
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.6
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.0
    Programming Language :: Python :: 3.1
    Programming Language :: Python :: 3.2
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Utilities

[aliases]
test=pytest

[bdist_wheel]
universal = 1

[entry_points]
console_scripts =
    trakt_tools = trakt_tools.runner.main:main

[files]
packages =
  trakt_tools

[pbr]
skip_changelog = true

[pytest]
python_files=*_tests.py

[tool:pytest]
python_files=*_tests.py